--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,8 @@ plugins:
 
 custom:
   client:
-    bucketName: my-store-app
+    bucketName: shop-react-cloudfront
+    bucketPolicyFile: policy/policy.json
     distributionFolder: dist
   s3BucketName: ${self:custom.client.bucketName}
 
